--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       
-      - name: Install .NETFramework 4.5
+      - name: Install .NET 4.5
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 4.5.x
