--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,10 +50,7 @@ jobs:
         run: nuget install xunit.runner.console -Version 2.4.1 -OutputDirectory testrunner
         
       - name: Compile code
-        run:  mcs ./src/SampleForMetrics/SampleForMetrics.sln
-        
-      - name: Build
-        run:  mono ./src/SampleForMetrics/SampleForMetrics.sln
+        run:  msbuild /verbosity:quiet /p:WarningLevel=0 /p:Configuration=Debug ./src/SampleForMetrics/SampleForMetrics.sln
 
       - name: Integration test under dotnet
         run: |
