--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: NuGet Restore
-        run: dotnet restore ./src/SampleForMetrics/SampleForMetrics.sln
+        run: nuget restore ./src/SampleForMetrics/SampleForMetrics.sln
         
       - name: Install xunit.runner.console
         run: nuget install xunit.runner.console -Version 2.4.1 -OutputDirectory testrunner
